<resources>
    <string name="app_name">Fract</string>
    <string name="compileError">ERROR: %s</string>
    <string name="openDemo">Samples</string>
    <string name="openFavorites">Favorites</string>
    <string name="addToFavorites">Add to Favorites</string>
    <string name="shareImage">Share Image</string>
    <string name="saveImageAs">Save Image as</string>
    <string name="setImageSize">Set Image Size</string>
    <string name="settings">Settings</string>
    <string name="imageWidthInPixel">Width (px)</string>
    <string name="imageHeightInPixel">Height (px)</string>
    <string name="xxLabel">[a] Horizontal-X</string>
    <string name="xyLabel">[c] Horizontal-Y</string>
    <string name="yxLabel">[b] Vertical-X</string>
    <string name="yyLabel">[d] Vertical-Y</string>
    <string name="yCenter">[f] Center-Y</string>
    <string name="xCenter">[e] Center-X</string>
    <string name="badNumberFormat">Bad number format</string>
    <string name="dimensionsOutOfRange">Dimensions must be in range (%d .. %d)</string>
    <string name="exceptionMessage">ERROR: %s</string>
    <string name="zeroDeterminante">Determinante (ad - bc) must not be 0</string>
    <string name="editScale">Set Scale</string>
    <string name="polarAngle">Polar Angle (Radians)</string>
    <string name="azimuthAngle">Azimuth Angle (Radians)</string>
    <string name="useLightEffect">Use Light Effect</string>
    <string name="shininess">Shininess (Integer 1 .. )</string>
    <string name="specularReflection">Specular Reflection (0.0 ..)</string>
    <string name="diffuseReflection">Diffuse Reflection (0.0 ..)</string>
    <string name="ambientReflection">Ambient Reflection (0 ..)</string>
    <string name="setShaderProperties">Shader Properties</string>
    <string name="editParameter">Edit Parameter</string>
    <string name="editParameterName">Edit Parameter %s</string>
    <string name="sourceCode">Source Code</string>
    <string name="scale">Scale</string>
    <string name="shaderProperties">Shader Properties</string>
    <string name="lockRotation">Lock Rotation</string>
    <string name="confirmZoom">Confirm with single tap</string>
    <string name="invalidName">Invalid name</string>
    <string name="forward">Forward</string>
    <string name="editProperties">Edit</string>
    <string name="showGrid">Show Grid</string>
    <string name="resetParameter">Reset to Default</string>
    <string name="saveImageToGallery">Save Image to Gallery</string>
    <string name="editPalette">Edit Palette</string>
    <string name="editShaderProperties">Edit Shader Properties</string>
    <string name="setToCenter">Set to Center</string>
    <string name="openBlog">Help (in Web Browser)</string>
    <string name="editLightsOnScreen">Edit Light Direction on Screen</string>
    <string name="editScaleOnScreen">Scale</string>
    <string name="editLightDirectionOnScreen">Light Direction</string>
    <string name="editPaletteOffsetOnScreen">Palette Offset</string>
    <string name="editOrbitOnScreen">Show Orbits</string>
    <string name="noneOnScreen">None</string>
    <string name="customResolution">Custom</string>
    <string name="mode">Mode</string>
    <string name="paletteMode">Palette Mode</string>
    <string name="lightMode">Light Mode</string>
    <string name="scaleMode">Scale Mode</string>
    <string name="none">None</string>
    <string name="noPaletteMode">Exclude from Palette Mode</string>
    <string name="imageFileName">Image filename</string>
    <string name="close">Close</string>
    <string name="contentProviderCouldNotSaveImage">Content provider could not save image</string>
    <string name="successfullySavedImage">Successfully saved image as %s</string>
    <string name="lightEffects">Light Effects</string>
    <string name="grantPermissionExplanation">Write permission is needed to write image files. Please grant permission and try again.</string>
    <string name="lastModified">last modified: %s</string>
    <string name="drawOrbitMode">Draw Orbit</string>
    <string name="lockCenter">Lock Center</string>
    <string name="centerOnValue">Center on value</string>
    <string name="orthogonalize">Orthogonalize</string>
</resources>
