<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetParameter" />

    <Button
        android:id="@+id/setToCenterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setToCenter" />

    <Button
        android:id="@+id/centerOnValueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/centerOnValue" />

</LinearLayout>