<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/touchEnabledCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/touchEnabled" />

    <CheckBox
        android:id="@+id/rotationLockCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lockRotation" />

    <CheckBox
        android:id="@+id/confirmZoomCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmZoom" />

    <CheckBox
        android:id="@+id/showGridCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showGrid" />

</LinearLayout>